--- a/packages/weapp-demo/package.json
+++ b/packages/weapp-demo/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@redchili/egg-ui": "^0.0.2",
     "linaria": "^1.3.3",
+    "postcss-url": "^8.0.0",
     "react": "^16.13.1",
     "remax": "2.1.1"
   },
